# cloud-storage-service

./: .gitignore  README.md  requirements.txt
client/: .envexample  client.py  pyproject.toml  requirements.txt
client/program/: api.py  db_handler.py  files_handler.py
server/: manage.py  pyproject.toml  requirements.txt
server/CloudService/: .envexample  asgi.py  settings.py  urls.py  wsgi.py
server/base/: admin.py  files_handler.py  models.py  serializers.py  urls.py  views.py
server/base/migrations/: 0001_initial.py  0002_alter_filemetadata_size.py  0003_alter_filemetadata_size_and_more.py
server/cloudService/: asgi.py  settings.py  urls.py  wsgi.py
