[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["a <a@a.a>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "23.7.0"
certifi = "2023.5.7"
charset-normalizer = "3.2.0"
distlib = "0.3.6"
filelock = "3.12.2"
idna = "3.4"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.1"
platformdirs = "3.5.3"
python-decouple = "3.8"
requests = "2.31.0"
tomli = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
