[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Z <Z@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asgiref = "3.7.2"
black = "23.7.0"
click = "8.1.5"
django = "4.2.3"
django-environ = "0.10.0"
djangorestframework = "3.14.0"
mypy-extensions = "1.0.0"
packaging = "23.1"
pathspec = "0.11.1"
platformdirs = "3.9.0"
psycopg = "3.1.9"
psycopg-binary = "3.1.9"
pytz = "2023.3"
sqlparse = "0.4.4"
tomli = "2.0.1"
typing-extensions = "4.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
